Finalizing documentation and adding the db chart
